# delta-lakehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  .pyiceberg.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  siak_schema.sql
.github/workflows/: ci.yml
configs/: faker.yaml  log.dev.yaml
dashboard/: README.md  config.py  data_extractor.py  main.py  metrics.py  visualizations.py
schemas/: cpc  warehouse_schema.sql
src/: delta_schema.py  iceberg_schema.py  main.py
src/generator/: academic_record_faker.py  attendance_faker.py  class_schedule_faker.py  course_faker.py  faculty_faker.py  grade_faker.py  lecturer_faker.py  program_faker.py  registration_faker.py  room_faker.py  semester_faker.py  semester_fees_faker.py  student_faker.py
src/pipeline/: extract.py  load.py  load_delta.py  load_iceberg.py  transform.py
src/scripts/: generate_data.py  load_to_postgres.py  update_iceberg.py
src/utils/: config.py  logging.py  minio.py
