[project]
name = "delta-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deltalake>=1.1.4",
    "minio>=7.2.16",
    "pandas>=2.3.1",
    "psycopg>=3.2.9",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.48.1",
    "duckdb>=1.3.2",
    "pyiceberg[s3fs]>=0.9.1",
]

[dependency-groups]
dev = ["faker>=37.5.3", "pyiceberg[sql-sqlite]>=0.9.1", "ruff>=0.12.9"]
notebook = ["ipykernel>=6.30.1"]
